tests/integration/build/errors/catch.c
/* Code generated using the Orng compiler https://ornglang.org */
#include <math.h>
#include <stdio.h>
#include <stdint.h>
#include <stdlib.h>

#include "debug.inc"

/* Function forward definitions */
int64_t _497_main(void);

/* Function definitions */
int64_t _497_main(void){
    int64_t _497_$retval;
    _497_$retval = 118;
    return _497_$retval;
}

int main(void) {
  printf("%ld",_497_main());
  return 0;
}
